🎨 MaJ styles SCSS : ajustement des marges et des alignements dans FollowCollection et FollowTrophy, amélioration de la flexibilité des éléments. Suppression de la largeur fixe dans titleTrophy et ajustement de la largeur maximale dans trophyParagraph. Réduction de la largeur minimale dans filterCard pour une meilleure adaptabilité.

--- a/src/app/home/noLogin/components/FollowCollection.scss
+++ b/src/app/home/noLogin/components/FollowCollection.scss
@@ -10,7 +10,7 @@
 .followCollection-container {
   @include flex(row, center, center);
   position: relative;
-  padding: 0 4rem;
+  padding: 0 4rem 0 0;
   gap: 4rem;
   background: linear-gradient(180deg, var(--gris-fonce) 0%, var(--gris-clair) 58.74%);
   border-radius: 3.5rem;
@@ -52,6 +52,10 @@
   color: var(--black);
   position: relative;
   z-index: 3;
+}
+
+.titleCollection {
+  text-align: right;
 }
 
 .title {
