--- a/src/app/search/styles/filterCard.scss
+++ b/src/app/search/styles/filterCard.scss
@@ -1,6 +1,5 @@
 .filter-card {
   background: var(--gris-fonce-3);
-  min-width: 328px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   position: relative;
   overflow: hidden;
